fixed the template

--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@ Contact
 </div>
 </div>
 <div class="main">
-<div class= "left">d
+<div class= "left">
+<div class="left1">Top Navigation</div>
+<div class="left1">Bottom Navigation</div>
   </div>
-<div class= "right">d
+  
+<div class= "right">main content
 </div>
 </div>
   </body>
